[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/pixel_arial_11/PIXEARG_.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/mainmenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Game" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 69.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 2 )

[node name="GridContainer" type="GridContainer" parent="TabContainer/New Game"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="LineEdit" parent="TabContainer/New Game/GridContainer"]
margin_right = 164.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
placeholder_text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seed" type="LineEdit" parent="TabContainer/New Game/GridContainer"]
margin_top = 50.0
margin_right = 164.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 3 )
placeholder_text = "Seed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play new game" type="Button" parent="TabContainer/New Game/GridContainer"]
margin_top = 100.0
margin_right = 164.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load Game" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 69.0
margin_right = -8.0
margin_bottom = -8.0

[node name="FileDialog" type="FileDialog" parent="TabContainer/Load Game"]
margin_top = -24.0
margin_right = 1008.0
margin_bottom = 523.0
window_title = "Open a Directory"
mode = 2
access = 1
current_dir = "user://"
current_path = "user://"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="TabContainer/Load Game"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select save" type="Button" parent="TabContainer/Load Game/GridContainer"]
margin_right = 138.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 3 )
text = "Select save"

[node name="Options" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 69.0
margin_right = -8.0
margin_bottom = -8.0

[connection signal="pressed" from="TabContainer/New Game/GridContainer/play new game" to="." method="_on_play_new_game_pressed"]
[connection signal="dir_selected" from="TabContainer/Load Game/FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="pressed" from="TabContainer/Load Game/GridContainer/select save" to="." method="_on_select_save_pressed"]
